# Monocypher

./: .gitignore  LibraryFiles.cmake  README.md
.github/workflows/: ci.yml
src/: monocypher.c
tests/: CMakeLists.txt  ctgrind.c  utils.c  utils.h  vectors.h
tests/speed/: speed-c25519.c  speed-donna.c  speed-tweetnacl.c  speed.c  speed.h
